k8s/base/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values: ["app"]
      containers:
        - name: bff
          image: mablinov2704/bff:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 300m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bff
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
